--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: ActSynt
 
 # Your name to show in the footer
-author: Some Person
+author: Antonio Di Stasio
 
 ###############################################
 # --- List of links in the navigation bar --- #
