--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: ActSynt
+title: ActSynt@ECAI2024
 
 # Your name to show in the footer
 author: Antonio Di Stasio
