--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: ActSynt@ECAI2024
 
 # Your name to show in the footer
-author: Some Person
+#author: Some Person
 
 ###############################################
 # --- List of links in the navigation bar --- #
