--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ footer-hover-col: "#0085A1"
 # instead of colour
 
 #navbar-img: "/assets/img/bgimage.png"
-footer-img: "/assets/img/logo-whitemech-nav.png"
+#footer-img: "/assets/img/logo-whitemech-nav.png"
 #page-img: "/assets/img/bgimage.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
